2010-10-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert-document): Autoload.
	(shr-img): Be silent.
	(shr-insert): Add a newline after every picture before text.
	(shr-add-font): Use overlays for combining faces.

	* mm-decode.el (mm-text-html-renderer): Default to shr.el rendering, if
	possible.
	(mm-shr): New function.

2010-10-02  Julien Danjou  <julien@danjou.info>

	* gnus-score.el (gnus-summary-score-effect): Use gnus-remove-if-not
	rather than remove-if-not.

	* gnus-group.el (gnus-group-completing-read): Use gnus-remove-if-not
	rather than remove-if-not.

	* gnus-art.el (gnus-mime-view-part-as-type): Use gnus-remove-if-not
	rather than remove-if-not.

	* gnus-util.el (gnus-remove-if-not): Add this function.

	* gnus-gravatar.el (gnus-gravatar-insert): Adjust character where we
	should go backward.

2010-10-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el: New file.

	* gnus-html.el (gnus-html-schedule-image-fetching): Be silent.

	* gnus-topic.el (gnus-topic-move-group): Fix the syntax of the
	completing read.

2010-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-check-bogus-newsgroups): Say how many groups
	we're being queried about.  Suggested by Dan Jacobson.

	* nndoc.el (nndoc-type-alist): Do babyl before mime-parts.  Suggested
	by Jason Eisner.

	* gnus-async.el (gnus-async-delete-prefetched-entry): Remove from hash
	table, too.  Suggested by Stefan Wiens.
	(gnus-async-prefetched-article-entry): Use intern-soft to avoid growing
	the table unnecessary.  Suggested by Stefan Wiens.

	* gnus-sum.el (gnus-summary-clear-local-variables): This is probably no
	longer needed, and probably doesn't work either, as pointed out by
	Stefan Wiens.
	(gnus-summary-exit): Remove call to the clearing function.
	(gnus-summary-exit-no-update): Ditto.

	* gnus-art.el (gnus-summary-save-in-file): Use with-current-buffer
	instead of gnus-eval-in-buffer-window to avoid popping up frames.
	Reported by Stefan Monnier.